--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
               <img class="rounded-4" src="./assets/images/cart.png" alt="project-1">
             </div>
             <div class="card-custom-content p-4">
-              <h4>Startup Landing Page</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, delectus.</p>
+              <h4></h4>
+              <p>We made an E-commerce website for our system and design analysis
+                Also database management system. We made it using the Java language.</p>
               <a href="#" class="link-custom">Read More</a>
             </div>
           </div>
@@ -158,11 +159,13 @@
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="card-custom rounded-4 bag-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img class="rounded-4" src="./assets/images/BANK.jpg" alt="project-1">
+              <img class="rounded-4" src="./assets/images/BANK.jpg" alt="project-2">
             </div>
             <div class="card-custom-content p-4">
-              <h4>Startup Landing Page</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, delectus.</p>
+              <h4>Bank Management System</h4>
+              <p>An object-oriented project completed in C++, where we worked on how to manage banking transactions in
+                different types of accounts and some other
+                features.</p>
               <a href="#" class="link-custom">Read More</a>
             </div>
           </div>
@@ -171,10 +174,10 @@
         <div class="col-md-6" data-aos="fade-up">
           <div class="card-custom rounded-4 bag-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img class="rounded-4" src="./assets/images/cart.png" alt="project-1">
+              <img class="rounded-4" src="./assets/images/cart.png" alt="project-3">
             </div>
             <div class="card-custom-content p-4">
-              <h4>Startup Landing Page</h4>
+              <h4>IUT E-commerce Website</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, delectus.</p>
               <a href="#" class="link-custom">Read More</a>
             </div>
@@ -184,11 +187,12 @@
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="card-custom rounded-4 bag-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img class="rounded-4" src="./assets/images/cart.png" alt="project-1">
+              <img class="rounded-4" src="./assets/images/cart.png" alt="project-4">
             </div>
             <div class="card-custom-content p-4">
-              <h4>Startup Landing Page</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, delectus.</p>
+              <h4>E-Commerce Website </h4>
+              <p>An automated system to manage buyer and seller credentials. Track product information,
+                inventory management for a robust E-commerce website.</p>
               <a href="#" class="link-custom">Read More</a>
             </div>
           </div>
@@ -225,15 +229,15 @@
 
             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
-                <h4>Bachelor of Computer Science</h4>
-                <p class="text-brand mb-2">Islamic University of Technology</p>
+                <h4>Higher Secondary Certificate</h4>
+                <p class="text-brand mb-2">Dhaka City College</p>
                 <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
               </div>
             </div>
             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
-                <h4>Bachelor of Computer Science</h4>
-                <p class="text-brand mb-2">Islamic University of Technology</p>
+                <h4>Secondary School Certificate</h4>
+                <p class="text-brand mb-2">Birshreshtha Noor Mohammad Public College</p>
                 <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
               </div>
             </div>
@@ -247,9 +251,10 @@
 
             <div class="col-12" data-aos="fade-up" data-aos-delay="400">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
-                <h4>Application Developer</h4>
+                <h4>C# .NET Developer</h4>
                 <p class="text-brand mb-2">InfoCrat Solution Ltd.</p>
-                <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
+                <p class="mb-0">Having graps over Model, View, Controller work flow.dolor sit amet consectetur
+                  adipisicing elit. Voluptas, error.</p>
               </div>
             </div>
 
@@ -281,7 +286,7 @@
       <div class="row pb-4" data-aos="fade-up">
         <div class="col-lg-8">
           <h6 class="text-brand">BLOG</h6>
-          <h1>My Blog Posts</h1>
+          <h1>PUBLICATIONS</h1>
         </div>
       </div>
 
@@ -294,8 +299,14 @@
             </div>
             <div class="card-custom-content p-4">
               <p class="text-brand mb-2">20 Dec, 2022</p>
-              <h5 class="mb-4">Design a creative landing page using Bootstrap 5</h5>
-              <a href="#" class="link-custom">Read More</a>
+              <h5 class="mb-4">An Evaluation of Transformer-Based Models in Personal Health Mention Detection</h5>
+              <a href="#" class="link-custom">ICCIT ISBN: 979-8-3503-4603-9
+                • It involves examining a social media post that mentions an illness and determining whether the context
+                of the
+                post is about an actual person facing the illness or not.
+                • When attempting to determine how far a disease has spread, the monitoring of such public posts linked
+                to
+                healthcare is crucial.</a>
             </div>
           </div>
         </div>
@@ -306,9 +317,13 @@
               <img src="./assets/images/blog3.png" alt="">
             </div>
             <div class="card-custom-content p-4">
-              <p class="text-brand mb-2">20 Dec, 2022</p>
-              <h5 class="mb-4">Design a creative landing page using Bootstrap 5</h5>
-              <a href="#" class="link-custom">Read More</a>
+              <p class="text-brand mb-2">October, 2023</p>
+              <h5 class="mb-4">Named Entity Recognition in Bengali Consumer Health Questions</h5>
+              <p>Findings of EMNLP</p>
+              <a href="#" class="link-custom">Read More
+                • Our work focused on Named Entity recognition from Consumer Health Questions (CHQ) for Bengali
+                Language.
+                • We curated such a large dataset of 31,783 samples.</a>
             </div>
           </div>
         </div>
