--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body data-bs-spy="scroll" data-bs-target=".navbar"></body>>
+<body data-bs-spy="scroll" data-bs-target=".navbar"></body>
 
 <!-- NAVBAR-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -31,7 +31,7 @@
           <a class="nav-link active" aria-current="page" href="#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#services">Services</a>
+          <a class="nav-link" href="#blog">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#work">Work</a>
@@ -40,7 +40,7 @@
           <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#blog">Blog</a>
+          <a class="nav-link" href="#research">Research</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
@@ -49,6 +49,7 @@
     </div>
   </div>
 </nav>
+
 <!--//NAVBAR-->
 
 <!--Content-Wrapper-->
@@ -60,15 +61,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10">
-          <h1 class="display-4 fw-bold" data-aos="fade-up">I AM A <span class="text-brand">PROGRAMMER</span> FROM DHAKA,
-            BANGLADESH</h1>
-          <p class="lead mt-3 mb-4" data-aos="fade-up" data-aos-delay="300">I am Nuzhat Nower, I possess foundation in
-            C++ programming, HTML and CSS honed through academic coursework and hands-on projects. Besides, through my
-            internship I am learning C#, ASP .NET with Core and MVC framework. I would
-            also like to put my hat in the ring for Tech Business opportunities as well. The combination of technical
-            knowledge with
-            a Business mindset is a deadly fusion! I crave for a place where i can get to explore both sides of the
-            coin.
+          <h1 class="display-4 fw-bold" data-aos="fade-up">I AM A <span class="text-brand">PROJECT MANAGER</span> FROM
+            DHAKA, BANGLADESH</h1>
+          <p class="lead mt-3 mb-4" data-aos="fade-up" data-aos-delay="300">Hi! Good to see you here. I am Nuzhat
+            Nower, a former developer turned project manager with a foundation in C#, ASP .NET, and MVC frameworks,
+            polished during my first internship. I'm passionate about merging technical expertise with a sharp business
+            mindset—a combination I believe is a game-changer! I'm always on the lookout for opportunities to explore
+            both the tech and business worlds. I'm currently expanding my expertise by learning WordPress, further
+            enhancing my ability to manage diverse projects and bridge technical and business gaps.
           </p>
           <div data-aos="fade-up" data-aos-delay="600">
             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
@@ -145,13 +145,15 @@
         <div class="col-md-6" data-aos="fade-up">
           <div class="card-custom rounded-4 bag-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img class="rounded-4" src="./assets/images/cart.png" alt="project-1">
+              <img class="rounded-4" src="./assets/images/Retina.jpg" alt="project-1">
             </div>
             <div class="card-custom-content p-4">
-              <h4></h4>
-              <p>We made an E-commerce website for our system and design analysis
-                Also database management system. We made it using the Java language.</p>
-              <a href="#" class="link-custom">Read More</a>
+              <h4>Retina Website</h4>
+              <p>The website is the online platform for Retina
+                Medical & Dental Admission Coaching, a leading educational consultancy in Bangladesh specializing in
+                medical and dental admission preparation. The site offers information on various courses, online
+                admission procedures, and resources such as question banks and guides.</p>
+              <a href="http://web.retinabd.org/" target="_blank" class="link-custom">View Project</a>
             </div>
           </div>
         </div>
@@ -159,14 +161,11 @@
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="card-custom rounded-4 bag-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img class="rounded-4" src="./assets/images/BANK.jpg" alt="project-2">
+              <img class="rounded-4" src="./assets/images/app.jpg" alt="project-2">
             </div>
             <div class="card-custom-content p-4">
-              <h4>Bank Management System</h4>
-              <p>An object-oriented project completed in C++, where we worked on how to manage banking transactions in
-                different types of accounts and some other
-                features.</p>
-              <a href="#" class="link-custom">Read More</a>
+              <h4>iOS App</h4>
+              <p>A Flutter-based application, which allows it to run on both Android and iOS.</p>
             </div>
           </div>
         </div>
@@ -178,7 +177,8 @@
             </div>
             <div class="card-custom-content p-4">
               <h4>IUT E-commerce Website</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, delectus.</p>
+              <p>We made an e-commerce website for IUT internal buying and selling purpose. We made it using the Java
+                language.</p>
               <a href="#" class="link-custom">Read More</a>
             </div>
           </div>
@@ -221,9 +221,10 @@
 
             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
-                <h4>Bachelor of Computer Science</h4>
+                <h4>B.Sc. in Computer Science and Engineering
+                </h4>
                 <p class="text-brand mb-2">Islamic University of Technology</p>
-                <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
+                <p class="mb-0">January 2018 - May 2023.</p>
               </div>
             </div>
 
@@ -231,14 +232,14 @@
               <div class="bg-base p-4 rounded-4 shawdow-effect">
                 <h4>Higher Secondary Certificate</h4>
                 <p class="text-brand mb-2">Dhaka City College</p>
-                <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
+                <p class="mb-0">2018.</p>
               </div>
             </div>
             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
                 <h4>Secondary School Certificate</h4>
                 <p class="text-brand mb-2">Birshreshtha Noor Mohammad Public College</p>
-                <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
+                <p class="mb-0">2016.</p>
               </div>
             </div>
 
@@ -251,25 +252,27 @@
 
             <div class="col-12" data-aos="fade-up" data-aos-delay="400">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
-                <h4>C# .NET Developer</h4>
-                <p class="text-brand mb-2">InfoCrat Solution Ltd.</p>
-                <p class="mb-0">Having graps over Model, View, Controller work flow.dolor sit amet consectetur
-                  adipisicing elit. Voluptas, error.</p>
+                <h4>Project Manager</h4>
+                <p class="text-brand mb-2">Devs Core -Present</p>
+                <p class="mb-0">
+                  <b>Internship:</b>
+                  Jun 2024 - Aug 2024
+                </p>
               </div>
             </div>
 
             <div class="col-12" data-aos="fade-up" data-aos-delay="500">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
-                <h4>Application Developer</h4>
+                <h4>C# .NET Developer</h4>
                 <p class="text-brand mb-2">InfoCrat Solution Ltd.</p>
-                <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
+                <p class="mb-0">Feb 2024 - May 2024</p>
               </div>
             </div>
             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
               <div class="bg-base p-4 rounded-4 shawdow-effect">
-                <h4>Application Developer</h4>
-                <p class="text-brand mb-2">InfoCrat Solution Ltd.</p>
-                <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, error.</p>
+                <h4>Android Developer</h4>
+                <p class="text-brand mb-2">Battery Low Interactive Ltd.</p>
+                <p class="mb-0">Nov 2021 - Dec 2021.</p>
               </div>
             </div>
           </div>
@@ -280,58 +283,56 @@
   <!-- About-close -->
 
 
-  <!--BLOG-->
-  <section id="blog" class="full-height px-lg-5">
+  <!--PUBLICATION-->
+  <section id="research" class="full-height px-lg-5">
     <div class="container">
       <div class="row pb-4" data-aos="fade-up">
         <div class="col-lg-8">
-          <h6 class="text-brand">BLOG</h6>
+          <h6 class="text-brand">Research</h6>
           <h1>PUBLICATIONS</h1>
         </div>
       </div>
 
       <div class="row gy-4">
 
-        <div class="col-md-4" data-aos="fade-up">
+        <div class="col-md-6" data-aos="fade-up">
           <div class="card-custom rounded-4 bg-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img src="./assets/images/blog.gif" alt="blog post">
+              <embed src="./assets/images/Thesis-Report.pdf" type="application/pdf" width="100%" height="400px" />
             </div>
             <div class="card-custom-content p-4">
-              <p class="text-brand mb-2">20 Dec, 2022</p>
-              <h5 class="mb-4">An Evaluation of Transformer-Based Models in Personal Health Mention Detection</h5>
-              <a href="#" class="link-custom">ICCIT ISBN: 979-8-3503-4603-9
+              <p class="text-brand mb-2">December, 2022</p>
+              <h5 class="mb-4">Personal Health Mention Detection</h5>
+              <p>ICCIT</p>
+              <a href="#" class="link-custom">
                 • It involves examining a social media post that mentions an illness and determining whether the context
-                of the
-                post is about an actual person facing the illness or not.
-                • When attempting to determine how far a disease has spread, the monitoring of such public posts linked
-                to
-                healthcare is crucial.</a>
+                of the post is about an actual person facing the illness or not.
+              </a>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="card-custom rounded-4 bg-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img src="./assets/images/blog3.png" alt="">
+              <embed src="./assets/images/2023.findings-emnlp.383.pdf" type="application/pdf" width="100%"
+                height="400px" />
             </div>
             <div class="card-custom-content p-4">
               <p class="text-brand mb-2">October, 2023</p>
-              <h5 class="mb-4">Named Entity Recognition in Bengali Consumer Health Questions</h5>
+              <h5 class="mb-4">NERvous About My Health</h5>
               <p>Findings of EMNLP</p>
-              <a href="#" class="link-custom">Read More
+              <a href="#" class="link-custom">
                 • Our work focused on Named Entity recognition from Consumer Health Questions (CHQ) for Bengali
-                Language.
-                • We curated such a large dataset of 31,783 samples.</a>
+                Language. We curated such a large dataset of 31,783 samples.</a>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
+        <!-- <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
           <div class="card-custom rounded-4 bg-base shawdow-effect">
             <div class="card-custom-image rounded-4">
-              <img src="./assets/images/blog2.jpg" alt="blog post">
+              <img src="./assets/images/" alt="post">
             </div>
             <div class="card-custom-content p-4">
               <p class="text-brand mb-2">20 Dec, 2022</p>
@@ -339,12 +340,12 @@
               <a href="#" class="link-custom">Read More</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
   </section>
-  <!--//BLOG-->
+  <!--//PUBLICATION-->
 
   <!--CONTACT-->
   <section id="contact" class="full-height px-lg-5">
@@ -383,12 +384,19 @@
     <div class="container">
       <div class="row gy-4 justify-content-between">
         <div class="col-auto">
-          <p class="mb-0">Copy right text here</p>
+          <p class="mb-0">&copy; 2024 Nuzhat Nower | All Rights Reserved</p>
         </div>
         <div class="col-auto">
           <div class="social-icons">
-            <a href="#"><i class="lab la-linkedin-in"></i></a>
-            <a href="#"><i class="lab la-github"></i></a>
+            <a href="https://www.linkedin.com/in/nuzhat-nower-236870233/" target="_blank">
+              <i class="lab la-linkedin-in"></i>
+            </a>
+            <a href="https://github.com/nower16" target="_blank">
+              <i class="lab la-github"></i>
+            </a>
+            <a href="mailto:nower@devs-core.com">
+              <i class="las la-envelope"></i>
+            </a>
           </div>
         </div>
       </div>
